--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,20 @@
 
     <string name="skip">跳过</string>
     <string name="skip_format">跳过 %s</string>
+
+    <string name="get">获取</string>
+    <string name="get_verify_code">获取验证码</string>
+    <string name="verify_code_countdown">%ds</string>
+    <string name="login">登录</string>
+    <string name="confirm">确定</string>
+
+    <string name="pwd_login">密码登录</string>
+    <string name="verify_code_login">验证码登录</string>
+
+    <string name="verify_login_account_hint">请输入手机号</string>
+    <string name="verify_login_pwd_hint">请输入验证码</string>
+
+    <string name="pwd_login_account_hint">请输入手机号/账号</string>
+    <string name="pwd_login_pwd_hint">请输入密码</string>
+
 </resources>
